Edited homepage components

--- a/index.html
+++ b/index.html
@@ -66,9 +66,9 @@
         <div class="menu-item" style="width: 300px; height: 350px;"><img src="assets/images/menu-items/kimchi-jjigae.png" class="menu-item-img" onerror="this.src='../assets/images/item-not-found.png'"><h3 class="menu-item-title" style="font-size: 1.5em; padding: 20px 20px 0px;">Kimchi Jjigae</h3><p class="menu-item-desc" style="font-size: 1em;">$11.99</p><button class="menu-item-add" onclick="window.location.href = './menu/item/?item=kimc-ie'" style="right: 15px; bottom: 15px; height: 50px; width: 70px; font-size: 0.9em;">ADD</button></div>
     </div>
     <div id="about">
-        <h1 id="about-title">About Us</h1>
+        <h2 id="about-title">ABOUT US</h2>
         <h3>"A Greener Plate makes the world a greener place."</h3>
-        <h3 style="padding: 0 15%;">Here at the Greener Place, we hold oursevles to the highest standards of sustainability, bringing food from local farms straight to your plate.</h3>
+        <h3 style="padding: 0 15%;">Here at the Greener Place, we hold ourselves to the highest standards of sustainability, bringing food from local farms straight to your plate.</h3>
         <button id="learn-more-button" onclick="window.location.href='about'">Learn More</button>
     </div>
     <br><br><br><br><br><br>
