--- a/menu/index.html
+++ b/menu/index.html
@@ -29,7 +29,7 @@
     <div id="nav-bar">
       <a id="logo" href="../"><img id="logo-img" src="../assets/images/logo.png"></a>
       <div id="nav-link-container">
-          <a class="nav-link" href="../about/">About</a>&nbsp;
+          <a class="nav-link" href="../about/">About Us</a>&nbsp;
           <a class="nav-link" href="../menu/">Menu</a>&nbsp;
           <a class="nav-link" href="../references/">References</a>&nbsp;
           <!--<a class="nav-link" href="../locations/">Locations</a>&nbsp;
@@ -54,7 +54,7 @@
     </div>
     </div>
     <div id="nav-menu" hidden>
-      <a class="nav-menu-link" href="../about/">About</a><br>
+      <a class="nav-menu-link" href="../about/">About Usgitggggggggggggggggggg</a><br>
       <a class="nav-menu-link" href="../menu/">Menu</a><br>
       <a class="nav-menu-link" href="../references/">References</a><br>
       <!--<a class="nav-menu-link" href="../locations/">Locations</a><br>
