--- a/about/index.html
+++ b/about/index.html
@@ -23,7 +23,7 @@
       </div>
   </div>
 
-  <h1 id="about-title">THE GREENER PLATE</h1>
+  <h1 id="about-title">ABOUT US</h1>
   <hr style="width: 20%;">
   <h2 id= "about-id">TeamID#: 2009-2</h2>
   <div class="main-container">
