--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
     <h3>NAVIGATION</h3>
     <a href="/about/" class="footer-link">ABOUT US</a><br><br>
     <a href="/menu/" class="footer-link">MENU</a><br><br>
-    <a href="/references/" class="footer-link">References</a>
+    <a href="/references/" class="footer-link">REFRENCES</a>
     <!-- <a href="https://yelp.com" class="footer-link">Reviews</a> --> 
 </div> 
 </body>
