Added references to reference page

--- a/references/index.html
+++ b/references/index.html
@@ -24,8 +24,60 @@
   </div>
 
   <h1 id="about-title">REFERENCES</h1>
-  <hr style="width: 40%;">
-  <div class="main-container">
-    <div id="main-text-div">
-      <br><br><br>
-  <h1>Works</h1>
+  <br>
+  <br>
+  <br>
+  <br>
+  <div id="pdf-div">
+    <object class="pdf" data="../assets/documents/work-log.pdf" width="800" height="500"></object>
+    <br><br><br>
+    <object class="pdf" data="../assets/documents/copyright-checklist.pdf" width="800" height="500"></object>
+  </div>
+  <br><br><br>
+  <h2>Works Cited</h2>
+  <div id="works-cited">
+  <p>
+    Columba, Gilbert. “Brocheta Mediterranean Bistro.” Brocheta Bistro, 2023, www.brochetabistro.com.   Accessed 11 Jan. 2025. 
+    <br class="cite-break"><br class="cite-break">
+    Elmore, Lindsey. “Spaghetti with Marinara Sauce.” Lindsey Elmore, 24 Oct. 2019, lindseyelmore.com/spaghetti-with-marinara-sauce/?q=/spaghetti-with-marinara-sauce/&. Accessed 11 Jan. 2025. 
+    <br class="cite-break"><br class="cite-break">
+    ElevenVideo, "Farmer carrying a wooden crate of fresh produce in a cornfield." Freepik, https://www.freepik.com/free-video/farmer-carrying-wooden-crate-fresh-produce-cornfield_3549274#fromView=search&page=1&position=16&uuid=8220ad3c-bf86-48f2-a39c-d8b56bea5d88. Accessed 11 Jan. 2025. 
+    <br class="cite-break"><br class="cite-break">
+    Factor. “Vegetarian Tamale Bowl with Spiced Sweet Potatoes & Pickled Jalapeño Crema - Factor.” Factormeals.ca, 2025, www.factormeals.ca/recipes/vegetarian-tamale-bowl-658494b72fc27e38f7d714ad.    Accessed 11 Jan. 2025. 
+    <br class="cite-break"><br class="cite-break">
+    freepik. “Freepik | Graphic Resources for Everyone.” Freepik, 2010, www.freepik.com. Accessed 11 Jan. 2025. 
+    <br class="cite-break"><br class="cite-break">
+    Hackett, Jolinda. “Enjoy Authentic Indian Flavors in Vegan Tofu Tikka Masala.” The Spruce Eats, 11 Jan. 2021, www.thespruceeats.com/vegan-tofu-tikka-masala-recipe-3378484. Accessed 11 Jan. 2025. 
+    <br class="cite-break"><br class="cite-break">
+    Hahnel, Kate. “Vegan Egusi Soup.” We Eat at Last, 28 Feb. 2023, weeatatlast.com/vegan-egusi-soup/.Accessed 11 Jan. 2025. <br>    haoliang, "penne pasta salad with green pesto sauce," Getty Images Signature, obtained via Canva, https://www.istockphoto.com/video/making-penne-pasta-salad-with-green-pesto-sauce-gm1198096701-342274105 
+    <br class="cite-break"><br class="cite-break">
+    Hu, Sam. “Creamy Vegan Ramen.” Ahead of Thyme, 19 Jan. 2022, www.aheadofthyme.com/creamy-vegan-ramen/. Accessed 11 Jan. 2025. 
+    <br class="cite-break"><br class="cite-break">
+    IndianMart. “Purest Gulab Jamun Made by Specialist Chef.” Indiamart.com, 2018, www.indiamart.com/proddetail/purest-gulab-jamun-made-by-specialist-chef-19737453030.html. Accessed 11 Jan. 2025. 
+    <br class="cite-break"><br class="cite-break">
+    Kevin. “Zesty Cauliflower Fritters + Video.” Silk Road Recipes, 11 Apr. 2022, silkroadrecipes.com/cauliflower-fritters/. Accessed 11 Jan. 2025. 
+    <br class="cite-break"><br class="cite-break">
+    Los Muertos Crew, "Close up Shot of Vegetable Salad in a Bowl." Pexels, obtained via Canva, https://www.pexels.com/video/close-up-shot-of-a-vegetable-salad-in-a-bowl-7601351/ 
+    <br class="cite-break"><br class="cite-break">
+    Makanjuola, Tomi. “Vegan Egusi Recipe | How to Make Nigerian Egusi Soup.” Vegannigerian.com, 2020, www.vegannigerian.com/2020/10/vegan-egusi-recipe-how-to-make-nigerian.html. Accessed 11 Jan. 2025. 
+    <br class="cite-break"><br class="cite-break">
+    Martens, Sarah. “Iced Hibiscus Tea Is the Refreshing Drink That Will Keep You Cool All Summer Long.” Better Homes & Gardens, 2023, www.bhg.com/hibiscus-tea-7568931. Accessed 11 Jan. 2025. 
+    <br class="cite-break"><br class="cite-break">
+    myburntorange. “Red Red, Ghanaian Bean Stew (Vegan, Vegetarian, Gluten-Free).” My Burnt Orange, 17 June 2020, www.myburntorange.com/red-red-ghanaian-bean-stew-vegan-vegetarian-gluten-free/. Accessed 11 Jan. 2025. 
+    <br class="cite-break"><br class="cite-break">
+    Overhiser, Sonja. “How to Cook Basmati Rice.” A Couple Cooks, ACoupleCooks, 30 Apr. 2019, www.acouplecooks.com/how-to-cook-basmati-rice/. Accessed 11 Jan. 2025. 
+    <br class="cite-break"><br class="cite-break">
+    pablopixel, "Cabbage plantation in the field. vegetables grow in a rows. aerial view from drone." Freepik, https://www.freepik.com/free-video/cabbage-plantation-field-vegetables-grow-rows-aerial-view-from-drone_3384743#fromView=search&page=1&position=10&uuid=8220ad3c-bf86-48f2-a39c-d8b56bea5d88. Accessed 11 Jan. 2025. 
+    <br class="cite-break"><br class="cite-break">
+    Pagot, Thomas. “Vegan Kimchi Noodle Soup.” Full of Plants, 6 Sept. 2023, fullofplants.com/vegan-kimchi-noodle-soup/. Accessed 11 Jan. 2025. 
+    <br class="cite-break"><br class="cite-break">
+    Roxy, So Vegan. “One Pot Mushroom Stroganoff.” SO VEGAN, 17 Jan. 2019, www.wearesovegan.com/one-pot-mushroom-stroganoff/. Accessed 11 Jan. 2025. 
+    <br class="cite-break"><br class="cite-break">
+    Rene. “Vegan Rigatoni Pie.” This Savory Vegan, 2 Mar. 2022, www.thissavoryvegan.com/vegan-rigatoni-pie/. Accessed 11 Jan. 2025. 
+    <br class="cite-break"><br class="cite-break">
+    Soraphotography "Broccoli, Lettuce, Pouring, Dressing." Artlist, obtained via Canva, https://artlist.io/stock-footage/clip/broccoli-lettuce-pouring-dressing/462917. Accessed 11 Jan. 2025. 
+    <br class="cite-break"><br class="cite-break">
+    Toast, Inc. “The Soup Peddler - South Lamar - Dasani Water.” Toasttab.com, 2025, order.toasttab.com/online/souppeddlersouthlamar/item-dasani-water_e5a494e1-e928-49fc-93dc-e9de1034c3c8. Accessed 11 Jan. 2025. <br>    Travelers. “Friday Brunch Specials.” Traveler’s Table | Curated Global Cuisine in Houston, TX, 2019, www.travelerstable.com/menus/. Accessed 11 Jan. 2025. <br>    terski, "Earth rotating." Pixabay, https://pixabay.com/gifs/earth-rotating-earth-spinning-earth-2768/. Accessed 11 Jan. 2025. <br>    StockSeller, "Beautiful road to wheat field at sunset." Freepik, https://www.freepik.com/free-video/beautiful-road-wheat-field-sunset_54689#fromView=author&page=6&position=23&uuid=d2ce958e-c888-48a5-b592-53aa0d38d4da. Accessed 11 Jan. 202   5.   
+  </p><br><br><br></div>
+  </body>
+</html>
