--- a/index.html
+++ b/index.html
@@ -106,12 +106,19 @@
                             <a href="/menu/" class="footer-link">MENU</a><br><br>
                             <a href="/locations/" class="footer-link">LOCATIONS</a><br><br>
                             <a href="/contact/" class="footer-link">CONTACT</a> -->
-<div class="footer-section">
-    <h3>NAVIGATION</h3>
-    <a href="/about/" class="footer-link">ABOUT US</a><br><br>
-    <a href="/menu/" class="footer-link">MENU</a><br><br>
-    <a href="/references/" class="footer-link">REFRENCES</a>
-    <!-- <a href="https://yelp.com" class="footer-link">Reviews</a> --> 
-</div> 
+    <footer>
+        <div class="footerContainer">
+            <div class="footerNav">
+                <ul>
+                    <li><a href="/about/" class="footer-link">ABOUT US</a></li><br><br>
+                    <li><a href="/menu/" class="footer-link">MENU</a></li><br><br>
+                    <li><a href="/references/" class="footer-link">REFRENCES</a>    
+                </ul>
+            </div>
+            <div class="footerBottom">
+                <p>Copyright &copy;2025 The Greener Plate. All Rights Reserved.</p>
+            </div>
+        </div> 
+    </footer>
 </body>
 </html>
