Updated reference page

--- a/references/index.html
+++ b/references/index.html
@@ -26,6 +26,10 @@
   <h1 id="about-title">REFERENCES</h1>
   <br>
   <br>
+  <div id="pdf-link-div">
+    <a class="pdf-link" href="../assets/documents/work-log.pdf">Work Log</a>
+    <a class="pdf-link" href="../assets/documents/copyright-checklist.pdf">Copyright Checklist</a>
+  </div>
   <br>
   <br>
   <div id="pdf-div">
