Adjusted reference page for mobile browswers

--- a/references/index.html
+++ b/references/index.html
@@ -27,17 +27,20 @@
   <br>
   <br>
   <div id="pdf-link-div">
-    <a class="pdf-link" href="../assets/documents/work-log.pdf">Work Log</a>
-    <a class="pdf-link" href="../assets/documents/copyright-checklist.pdf">Copyright Checklist</a>
+    <a class="pdf-link" target="_blank" href="../assets/documents/work-log.pdf">Work Log</a>
+    <a class="pdf-link" target="_blank" href="../assets/documents/copyright-checklist.pdf">Copyright Checklist</a>
   </div>
   <br>
   <br>
   <div id="pdf-div">
-    <object class="pdf" data="../assets/documents/work-log.pdf" width="800" height="500"></object>
+    <object class="pdf" data="../assets/documents/work-log.pdf" width="800" height="500">
+    </object>
     <br><br><br>
-    <object class="pdf" data="../assets/documents/copyright-checklist.pdf" width="800" height="500"></object>
-  </div>
+    <object class="pdf" data="../assets/documents/copyright-checklist.pdf" width="800" height="500">
+    </object>
+
   <br><br><br>
+  </div>
   <h2>Works Cited</h2>
   <div id="works-cited">
   <p>
@@ -83,5 +86,6 @@
     <br class="cite-break"><br class="cite-break">
     Toast, Inc. “The Soup Peddler - South Lamar - Dasani Water.” Toasttab.com, 2025, order.toasttab.com/online/souppeddlersouthlamar/item-dasani-water_e5a494e1-e928-49fc-93dc-e9de1034c3c8. Accessed 11 Jan. 2025. <br>    Travelers. “Friday Brunch Specials.” Traveler’s Table | Curated Global Cuisine in Houston, TX, 2019, www.travelerstable.com/menus/. Accessed 11 Jan. 2025. <br>    terski, "Earth rotating." Pixabay, https://pixabay.com/gifs/earth-rotating-earth-spinning-earth-2768/. Accessed 11 Jan. 2025. <br>    StockSeller, "Beautiful road to wheat field at sunset." Freepik, https://www.freepik.com/free-video/beautiful-road-wheat-field-sunset_54689#fromView=author&page=6&position=23&uuid=d2ce958e-c888-48a5-b592-53aa0d38d4da. Accessed 11 Jan. 202   5.   
   </p><br><br><br></div>
+  <script src="script.js"></script>
   </body>
 </html>
