--- a/about/index.html
+++ b/about/index.html
@@ -39,10 +39,30 @@
         </div>
   </div>
   <div id="farm-container">
-    <p class="half-text left-text">Here at the Greener Plate, we are focused on providing only the freshest of foods to our customers, which is why we are partnered with local farmers to ensure that we provide only the freshest vegetables and fruits that you can ever imagine. </p>
-    <p class="half-text right-text">Don't worry about not finishing your plate, because we have you covered. Here, we take all our food waste and turn it into compost, which we then send to local farmers to grow vegetables and fruit that is both sustainable and delicious. </p>
+    <p class="half-text left-text">
+      <b style="color: rgb(0, 112, 0); font-size: 1.5em; font-family: 'Helvetica Neue', Arial, Helvetica, sans-serif">FARM TO TABLE</b><br><br>
+      Here at the Greener Plate, we are focused on providing only the freshest of foods to our customers, which is why we are partnered with local farmers to ensure that we provide only the freshest vegetables and fruits that you can ever imagine. </p>
+    <p class="half-text right-text">
+      <b style="color: rgb(0, 112, 0); font-size: 1.5em; font-family: 'Helvetica Neue', Arial, Helvetica, sans-serif">SOLVING FOOD WASTE</b><br><br>
+      Don't worry about not finishing your plate, because we have you covered. Here, we take all our food waste and turn it into compost, which we then send to local farmers to grow vegetables and fruit that is both sustainable and delicious. 
+    </p>
 
   </div>
+
+  <footer>
+    <div class="footerContainer">
+        <div class="footerNav">
+            <ul style="list-style-type:square;">
+                <li><a href="/about/" class="footer-link">ABOUT US</a></li><br><br>
+                <li><a href="/menu/" class="footer-link">MENU</a></li><br><br>
+                <li><a href="/references/" class="footer-link">REFRENCES</a></li>   
+            </ul>
+        </div>
+        <div class="footerBottom">
+            <p>Copyright &copy;2025 The Greener Plate. All Rights Reserved.</p>
+        </div>
+    </div> 
+</footer>
   <script src="script.js"></script>
   <script src="../universal.js"></script>
   </body>
