--- a/index.html
+++ b/index.html
@@ -109,10 +109,10 @@
     <footer>
         <div class="footerContainer">
             <div class="footerNav">
-                <ul>
+                <ul style="list-style-type:square;">
                     <li><a href="/about/" class="footer-link">ABOUT US</a></li><br><br>
                     <li><a href="/menu/" class="footer-link">MENU</a></li><br><br>
-                    <li><a href="/references/" class="footer-link">REFRENCES</a>    
+                    <li><a href="/references/" class="footer-link">REFRENCES</a></li>   
                 </ul>
             </div>
             <div class="footerBottom">
