--- a/references/index.html
+++ b/references/index.html
@@ -86,6 +86,20 @@
     <br class="cite-break"><br class="cite-break">
     Toast, Inc. “The Soup Peddler - South Lamar - Dasani Water.” Toasttab.com, 2025, order.toasttab.com/online/souppeddlersouthlamar/item-dasani-water_e5a494e1-e928-49fc-93dc-e9de1034c3c8. Accessed 11 Jan. 2025. <br>    Travelers. “Friday Brunch Specials.” Traveler’s Table | Curated Global Cuisine in Houston, TX, 2019, www.travelerstable.com/menus/. Accessed 11 Jan. 2025. <br>    terski, "Earth rotating." Pixabay, https://pixabay.com/gifs/earth-rotating-earth-spinning-earth-2768/. Accessed 11 Jan. 2025. <br>    StockSeller, "Beautiful road to wheat field at sunset." Freepik, https://www.freepik.com/free-video/beautiful-road-wheat-field-sunset_54689#fromView=author&page=6&position=23&uuid=d2ce958e-c888-48a5-b592-53aa0d38d4da. Accessed 11 Jan. 202   5.   
   </p><br><br><br></div>
+  <footer>
+    <div class="footerContainer">
+        <div class="footerNav">
+            <ul style="list-style-type:square;">
+                <li><a href="../about/" class="footer-link">ABOUT US</a></li><br><br>
+                <li><a href="../menu/" class="footer-link">MENU</a></li><br><br>
+                <li><a href="../references/" class="footer-link">REFRENCES</a></li>   
+            </ul>
+        </div>
+        <div class="footerBottom">
+            <p>Copyright &copy;2025 The Greener Plate. All Rights Reserved.</p>
+        </div>
+    </div> 
+</footer>
   <script src="script.js"></script>
   </body>
 </html>
