--- a/menu/index.html
+++ b/menu/index.html
@@ -106,6 +106,21 @@
         <a href="/contact/" class="footer-link">CONTACT</a>
       </div>
 </footer> -->
+<br><br>
+<footer>
+  <div class="footerContainer">
+      <div class="footerNav">
+          <ul style="list-style-type:square;">
+              <li><a href="../about/" class="footer-link">ABOUT US</a></li><br><br>
+              <li><a href="../menu/" class="footer-link">MENU</a></li><br><br>
+              <li><a href="../references/" class="footer-link">REFRENCES</a></li>   
+          </ul>
+      </div>
+      <div class="footerBottom">
+          <p>Copyright &copy;2025 The Greener Plate. All Rights Reserved.</p>
+      </div>
+  </div> 
+</footer>
 <script type="module" src="menu-items.js"></script>
 <script type="module" src="script.js"></script>
 <script src="../universal.js"></script>
