--- a/about/index.html
+++ b/about/index.html
@@ -53,9 +53,9 @@
     <div class="footerContainer">
         <div class="footerNav">
             <ul style="list-style-type:square;">
-                <li><a href="/about/" class="footer-link">ABOUT US</a></li><br><br>
-                <li><a href="/menu/" class="footer-link">MENU</a></li><br><br>
-                <li><a href="/references/" class="footer-link">REFRENCES</a></li>   
+                <li><a href="../about/" class="footer-link">ABOUT US</a></li><br><br>
+                <li><a href="../menu/" class="footer-link">MENU</a></li><br><br>
+                <li><a href="../references/" class="footer-link">REFRENCES</a></li>   
             </ul>
         </div>
         <div class="footerBottom">
