--- a/menu/index.html
+++ b/menu/index.html
@@ -54,7 +54,7 @@
     </div>
     </div>
     <div id="nav-menu" hidden>
-      <a class="nav-menu-link" href="../about/">About Usgitggggggggggggggggggg</a><br>
+      <a class="nav-menu-link" href="../about/">About Us</a><br>
       <a class="nav-menu-link" href="../menu/">Menu</a><br>
       <a class="nav-menu-link" href="../references/">References</a><br>
       <!--<a class="nav-menu-link" href="../locations/">Locations</a><br>
