Made about us earth behind other elements

--- a/about/index.html
+++ b/about/index.html
@@ -30,7 +30,7 @@
         <img id="earth-image" class="side-image circle" src="../assets/images/earth.gif">
         <div id="main-text-div">
             <br><br><br>
-        <p>Here at Greener Plate, we have a specific goal in mind: sustainable cooking for all peoples and cultures. Our menu specializes in different vegan and vegetarian cuisines and dishes from all around the world, ranging from the Americas, Europe, Asia, Africa, and the Middle East. Overall, our combination of fresh vegetables, herbs, and imported spices provide different dishes and dishes for everyone to enjoy, no matter where you are from. </p>
+        <p id="main-text">Here at Greener Plate, we have a specific goal in mind: sustainable cooking for all peoples and cultures. Our menu specializes in different vegan and vegetarian cuisines and dishes from all around the world, ranging from the Americas, Europe, Asia, Africa, and the Middle East. Overall, our combination of fresh vegetables, herbs, and imported spices provide different dishes and dishes for everyone to enjoy, no matter where you are from. </p>
         <br><br>
         <video id="farm-slideshow" muted autoplay loop playinline>
             <source src="../assets/videos/farm-to-plate-slideshow.mp4" type="video/mp4">
