Added Google Analytics tags

--- a/menu/index.html
+++ b/menu/index.html
@@ -25,6 +25,15 @@
   <meta name="msapplication-TileImage" content="../assets/icons/ms-icon-144x144.png">
   <meta name="theme-color" content="#ffffff">
   </head>
+  <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-3VT9TXC4WJ"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-3VT9TXC4WJ');
+</script>
   <body>
     <div id="nav-bar">
       <a id="logo" href="../"><img id="logo-img" src="../assets/images/logo.png"></a>
